--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,11 @@
     <script src="https://kit.fontawesome.com/2687a23fd5.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/jpg" href="./icon.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+        <meta property="og:title" content="Khakis" />
+        <meta property="og:image" content="project_pic.png" />
+        <meta property="og:description" content="slack clone project" />
+        <meta property="og:url" content="https://khakis.onrender.com/" />
     <title>Khakis</title>
   </head>
   <body>
